syntax = "proto3";

option csharp_namespace = "Generated";

message LoginRequest {
	string username = 1;
	string password = 2;
}

message RegisterRequest {
	string username = 1;
	string password = 2;
	string validation_password = 3;
}

message AuthenticationResponse {
	bool success = 1;
	int32 id = 2;
}

service AuthenticationService {
	rpc Login(LoginRequest) returns (AuthenticationResponse);
	rpc Register(RegisterRequest) returns (AuthenticationResponse);
}